--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -43,6 +43,12 @@
     margin-bottom: 5px;
 }
 
+.form select{
+    max-width: 80%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .button{
     max-width: 80%;
     display: flex;
