--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -16,44 +16,46 @@
 .authLayout {
     height: 100vh;
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 30% 60% 10%;
 }
 
 .sideNav{
     
-    top: 0;
-    bottom: 0;
+    /* top: 0;
+    bottom: 0; */
     background-color: #202020;
-    max-width: 250px;
+    max-width: 230px;
     padding: 20px;
-    color: #fff;
+    /* color: #fff; */
 }
 
-.profile{
+/* .profile{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
-.profile img {
+/* .profile img {
     width: 80px;
     height: 80px;
     border-radius: 50%;
-}
+} */
 
-.profile .username{
+/* .profile .username{
     text-align: center;
     margin:5px 0 5px 0;
-}
+} */
 
-.profile .descriptions {
+/* .profile .descriptions {
     text-align: center;
-}
+} */
 
 .navBar li{
     margin: 5px;
+    padding: 5px; 
+    /* margin: 5px;
     padding: 5px;
-    text-align: center;
+    /* text-align: center; */
     background-color: #454651;
 }
 
